{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 1361,
  "lineage": "8c2ee4da-28a5-cd98-014e-10cc10270eee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:internet-gateway/igw-00475585fab74d277",
            "id": "igw-00475585fab74d277",
            "owner_id": "203918882105",
            "tags": {
              "Name": "tf-internet-gateway"
            },
            "tags_all": {
              "Name": "tf-internet-gateway"
            },
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "shared_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:loadbalancer/app/tf-avertro-load-balancer/9fc0b1fd5572e755",
            "arn_suffix": "app/tf-avertro-load-balancer/9fc0b1fd5572e755",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-avertro-load-balancer-672913523.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:loadbalancer/app/tf-avertro-load-balancer/9fc0b1fd5572e755",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-avertro-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e7ee6ee1bb09c61"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0172a5b2e0d9e6d0f"
              },
              {
                "subnet_id": "subnet-040f0f89ac8000b68"
              },
              {
                "subnet_id": "subnet-0b8c574163087c9c4"
              }
            ],
            "subnets": [
              "subnet-0172a5b2e0d9e6d0f",
              "subnet-040f0f89ac8000b68",
              "subnet-0b8c574163087c9c4"
            ],
            "vpc_id": "vpc-0bf7e77427a0f0c59",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_s3_bucket.lb_log_storage",
            "aws_security_group.lb_security_group",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:listener/app/tf-avertro-load-balancer/9fc0b1fd5572e755/f8f8bcf9e3778800",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:listener/app/tf-avertro-load-balancer/9fc0b1fd5572e755/f8f8bcf9e3778800",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:loadbalancer/app/tf-avertro-load-balancer/9fc0b1fd5572e755",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.shared_load_balancer",
            "aws_s3_bucket.lb_log_storage",
            "aws_security_group.lb_security_group",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:listener/app/tf-avertro-load-balancer/9fc0b1fd5572e755/fdbe958f5063afce",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:203918882105:certificate/ec0ed780-b15f-4059-8203-32a18b7f1b2b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Default response",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:listener/app/tf-avertro-load-balancer/9fc0b1fd5572e755/fdbe958f5063afce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:loadbalancer/app/tf-avertro-load-balancer/9fc0b1fd5572e755",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.shared_load_balancer",
            "aws_s3_bucket.lb_log_storage",
            "aws_security_group.lb_security_group",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:targetgroup/dev-api-target-group/bf81748c785c1bf9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:listener-rule/app/tf-avertro-load-balancer/9fc0b1fd5572e755/f8f8bcf9e3778800/caa4a25ad82360df",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dev-api.khoi-mockapi.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:listener-rule/app/tf-avertro-load-balancer/9fc0b1fd5572e755/f8f8bcf9e3778800/caa4a25ad82360df",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:listener/app/tf-avertro-load-balancer/9fc0b1fd5572e755/f8f8bcf9e3778800",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.shared_load_balancer",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.lb_tg",
            "aws_s3_bucket.lb_log_storage",
            "aws_security_group.lb_security_group",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:targetgroup/dev-api-target-group/bf81748c785c1bf9",
            "arn_suffix": "targetgroup/dev-api-target-group/bf81748c785c1bf9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:targetgroup/dev-api-target-group/bf81748c785c1bf9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:203918882105:loadbalancer/app/tf-avertro-load-balancer/9fc0b1fd5572e755"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-api-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:route-table/rtb-0aa3f6e3835adbbfc",
            "id": "rtb-0aa3f6e3835adbbfc",
            "owner_id": "203918882105",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00475585fab74d277",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-southeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a9e6e28243c138d",
            "route_table_id": "rtb-0aa3f6e3835adbbfc",
            "subnet_id": "subnet-0b8c574163087c9c4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-southeast-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8e6a82cf63d6ff7",
            "route_table_id": "rtb-0aa3f6e3835adbbfc",
            "subnet_id": "subnet-040f0f89ac8000b68"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-southeast-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ab71240047205c2",
            "route_table_id": "rtb-0aa3f6e3835adbbfc",
            "subnet_id": "subnet-0172a5b2e0d9e6d0f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group/sg-059076bbc7c77bc2c",
            "description": "Security group for ec2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059076bbc7c77bc2c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e7ee6ee1bb09c61"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "203918882105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 security group"
            },
            "tags_all": {
              "Name": "ec2 security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group/sg-04e7ee6ee1bb09c61",
            "description": "Security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-059076bbc7c77bc2c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-04e7ee6ee1bb09c61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "load balancer security group",
            "name_prefix": "",
            "owner_id": "203918882105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load balancer security group"
            },
            "tags_all": {
              "Name": "load balancer security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group/sg-091b23f62060191c4",
            "description": "Security group for rds database",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-059076bbc7c77bc2c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-091b23f62060191c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-059076bbc7c77bc2c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tf-rds-sg",
            "name_prefix": "",
            "owner_id": "203918882105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-rds-sg"
            },
            "tags_all": {
              "Name": "tf-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-southeast-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:subnet/subnet-0b8c574163087c9c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8c574163087c9c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918882105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "terraform": "true"
            },
            "tags_all": {
              "terraform": "true"
            },
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-southeast-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:subnet/subnet-040f0f89ac8000b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040f0f89ac8000b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918882105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "terraform": "true"
            },
            "tags_all": {
              "terraform": "true"
            },
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ap-southeast-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:subnet/subnet-0172a5b2e0d9e6d0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0172a5b2e0d9e6d0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918882105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "terraform": "true"
            },
            "tags_all": {
              "terraform": "true"
            },
            "vpc_id": "vpc-0bf7e77427a0f0c59"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:vpc/vpc-0bf7e77427a0f0c59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0823924a2b5c15bd7",
            "default_route_table_id": "rtb-0c90fa386594c6bfd",
            "default_security_group_id": "sg-07171fc35b047c33d",
            "dhcp_options_id": "dopt-0e7831b98bd96441b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf7e77427a0f0c59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c90fa386594c6bfd",
            "owner_id": "203918882105",
            "tags": {
              "Name": "tf-vpc-name"
            },
            "tags_all": {
              "Name": "tf-vpc-name"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_outbound_rule_allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group-rule/sgr-017a0a051ea4c0a3a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-017a0a051ea4c0a3a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-059076bbc7c77bc2c",
            "security_group_rule_id": "sgr-017a0a051ea4c0a3a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lb_sg_outbound_rule_allow_http_ipv4_from_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group-rule/sgr-0e24b10259bc7cec7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e24b10259bc7cec7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-059076bbc7c77bc2c",
            "security_group_id": "sg-04e7ee6ee1bb09c61",
            "security_group_rule_id": "sgr-0e24b10259bc7cec7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_security_group.lb_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lb_sg_outbound_rule_allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group-rule/sgr-06fb8bf1fd5a7340b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-06fb8bf1fd5a7340b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04e7ee6ee1bb09c61",
            "security_group_rule_id": "sgr-06fb8bf1fd5a7340b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_sg_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group-rule/sgr-04216ae6769979531",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-04216ae6769979531",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-059076bbc7c77bc2c",
            "security_group_id": "sg-091b23f62060191c4",
            "security_group_rule_id": "sgr-04216ae6769979531",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_security_group.rds_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_rule_allow_http_ipv4_from_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group-rule/sgr-070e3f0bf3b5ee37a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-070e3f0bf3b5ee37a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04e7ee6ee1bb09c61",
            "security_group_id": "sg-059076bbc7c77bc2c",
            "security_group_rule_id": "sgr-070e3f0bf3b5ee37a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_security_group.lb_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lb_sg_inbound_rule_allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group-rule/sgr-0a24124720dbd25a6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a24124720dbd25a6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04e7ee6ee1bb09c61",
            "security_group_rule_id": "sgr-0a24124720dbd25a6",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_sg_inbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:203918882105:security-group-rule/sgr-072959d5e88f9c183",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-072959d5e88f9c183",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-059076bbc7c77bc2c",
            "security_group_id": "sg-091b23f62060191c4",
            "security_group_rule_id": "sgr-072959d5e88f9c183",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_security_group.rds_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}